full height 100% body and html fixed with overflow: auto

--- a/app/assets/stylesheets/application/_application_main.scss
+++ b/app/assets/stylesheets/application/_application_main.scss
@@ -5,10 +5,11 @@ body {
 }
 
 html,
-body,
-.container-main {
+body {
   height: 100%;
+  overflow: auto;
 }
+
 
 .container-main {
   display: flex;
